AC_PREREQ([2.63])
AC_INIT([gtk-dilatory], [0.1], [sbrabec@suse.cz])
AM_INIT_AUTOMAKE([1.10 foreign no-dist-gzip dist-bzip2])
AC_CONFIG_SRCDIR([dilatory.c])
AC_CONFIG_MACRO_DIR([m4])
AM_DISABLE_STATIC

AC_PROG_CC
AC_PROG_LIBTOOL

AM_PATH_GTK_2_0()
AC_CHECK_HEADERS([unistd.h])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
